--- a/index.html
+++ b/index.html
@@ -1,66 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yellow Flower</title>
+    <style>
+        body, html {
+            margin: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .flower {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .center {
+            background-color: yellow;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+        }
+
+        .petals {
+            position: absolute;
+            background-color: yellow;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+        }
+
+        .petals::before,
+        .petals::after {
+            content: '';
+            position: absolute;
+            background-color: yellow;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+        }
+
+        .petals::before {
+            transform: rotate(45deg);
+        }
+
+        .petals::after {
+            transform: rotate(-45deg);
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Matthew Muucha</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="resume.pdf" target="_blank">Resume</a></li>
-      </ul>
-    </nav>
-    
-  </header>
-
-  <main>
-    <section id="about" class="about-section">
-        <div class="about-box">
-          <h2>About Me</h2>
-          <p>
-                  
-            Hello! I'm Matthew Mucha, a passionate computer engineering graduate with a love for coding and technology. I thrive on turning ideas into real-world solutions. 
-            Let's shape a brighter future through technology together.
-          </p>
-        </div>
-      </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <div class="project">
-        <img src="project1.jpg" alt="Project 1">
-        <h3>Project 1</h3>
-        <p>Description of Project 1.</p>
-      </div>
-      <!-- Add more project items as needed -->
-    </section>
-
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" required></textarea>
-
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2023 Your Name. All rights reserved.</p>
-  </footer>
+    <div class="flower">
+        <div class="center"></div>
+        <div class="petals"></div>
+    </div>
 </body>
 </html>
