--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yellow Flower</title>
     <style>
-        body, html {
+        body {
             margin: 0;
-            height: 100%;
-            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #ffffcc; /* Light yellow background */
         }
 
         .flower {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            position: relative;
         }
 
         .center {
@@ -23,6 +23,10 @@
             width: 50px;
             height: 50px;
             border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         .petals {
@@ -31,6 +35,9 @@
             border-radius: 50%;
             width: 100px;
             height: 100px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         .petals::before,
@@ -41,6 +48,9 @@
             border-radius: 50%;
             width: 100px;
             height: 100px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         .petals::before {
