--- a/index.html
+++ b/index.html
@@ -1,71 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yellow Flower</title>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #ffffcc; /* Light yellow background */
-        }
-
-        .flower {
-            position: relative;
-        }
-
-        .center {
-            background-color: yellow;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .petals {
-            position: absolute;
-            background-color: yellow;
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .petals::before,
-        .petals::after {
-            content: '';
-            position: absolute;
-            background-color: yellow;
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .petals::before {
-            transform: rotate(45deg);
-        }
-
-        .petals::after {
-            transform: rotate(-45deg);
-        }
-    </style>
-</head>
-<body>
-    <div class="flower">
-        <div class="center"></div>
-        <div class="petals"></div>
-    </div>
-</body>
+<div id="position" class="sunflower">
+	<div class="head">
+	    <div id="eye-1" class="eye"></div>
+	    <div id="eye-2" class="eye"></div>
+	    <div class="mouth"></div>
+	</div>
+	<div class="petals"></div>
+	<div class="trunk">
+		<div class="left-branch"></div>
+		<div class="right-branch"></div>
+	</div>
+	<div class="vase"></div>
+</div>
 </html>
