--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<div id="position" class="sunflower">
-	<div class="head">
-	    <div id="eye-1" class="eye"></div>
-	    <div id="eye-2" class="eye"></div>
-	    <div class="mouth"></div>
-	</div>
-	<div class="petals"></div>
-	<div class="trunk">
-		<div class="left-branch"></div>
-		<div class="right-branch"></div>
-	</div>
-	<div class="vase"></div>
-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yellow Flower</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="flower"></div>
+</body>
 </html>
