--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yellow Flower</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+
+        .flower {
+            width: 100px;
+            height: 150px;
+            position: relative;
+        }
+
+        .stem {
+            width: 10px;
+            height: 100px;
+            background-color: #00ff00;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .blossom {
+            width: 60px;
+            height: 60px;
+            background-color: #ffcc00;
+            border-radius: 50%;
+            position: absolute;
+            bottom: 100px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    </style>
 </head>
 <body>
-    <div class="flower"></div>
+    <div class="flower">
+        <div class="stem"></div>
+        <div class="blossom"></div>
+    </div>
 </body>
 </html>
