--- a/index.html
+++ b/index.html
@@ -1,51 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yellow Flower</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-
-        .flower {
-            width: 100px;
-            height: 150px;
-            position: relative;
-        }
-
-        .stem {
-            width: 10px;
-            height: 100px;
-            background-color: #00ff00;
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .blossom {
-            width: 60px;
-            height: 60px;
-            background-color: #ffcc00;
-            border-radius: 50%;
-            position: absolute;
-            bottom: 100px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-    </style>
-</head>
-<body>
-    <div class="flower">
-        <div class="stem"></div>
-        <div class="blossom"></div>
+<div class="flower">
+    <div class="mid">
     </div>
-</body>
-</html>
+    <div class="Petal1 p1">
+    </div>
+    <div class="Petal1 p2">
+    </div>
+    <div class="Petal1 p3">
+    </div>
+    <div class="Petal1 p4">
+    </div>
+    <div class="Petal2 p1">
+    </div>
+    <div class="Petal2 p2">
+    </div>
+    <div class="Petal2 p3">
+    </div>
+    <div class="Petal2 p4">
+    </div>
+    <div class="Petal3 p1">
+    </div>
+    <div class="Petal3 p2">
+    </div>
+    <div class="Petal3 p3">
+    </div>
+    <div class="Petal3 p4">
+    </div>
+  </div>
+
+
+
+<!-- Subscribe btn -->
+<a class="btn" target="blank" href="https://bit.ly/3n65ETf">subscribe me!</a>
