--- a/index.html
+++ b/index.html
@@ -1,32 +1,23 @@
-<div class="flower">
-    <div class="mid">
-    </div>
-    <div class="Petal1 p1">
-    </div>
-    <div class="Petal1 p2">
-    </div>
-    <div class="Petal1 p3">
-    </div>
-    <div class="Petal1 p4">
-    </div>
-    <div class="Petal2 p1">
-    </div>
-    <div class="Petal2 p2">
-    </div>
-    <div class="Petal2 p3">
-    </div>
-    <div class="Petal2 p4">
-    </div>
-    <div class="Petal3 p1">
-    </div>
-    <div class="Petal3 p2">
-    </div>
-    <div class="Petal3 p3">
-    </div>
-    <div class="Petal3 p4">
-    </div>
-  </div>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>For Karolyna<3</title>
+    <style>
+        /* This CSS rule sets the maximum width of the image to 100% of its container */
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
 
+<h1>Para Ti Mi Amor <3</h1>
 
+<!-- This is the image tag with the style attribute -->
+<img src="https://cdn1.1800flowers.com/wcsstore/Flowers/images/catalog/98712lx.jpg" alt="Description of the image">
+
+</body>
+</html>
 
 
