inital implimentation for portfolio website

--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>For Karolyna<3</title>
-    <style>
-        /* This CSS rule sets the maximum width of the image to 100% of its container */
-        
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
+<!DOCTYPE html> 
+<html lang = "en">
+
+<head> 
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content = "width = device - width, initial - scale = 1.0">
+
+    <title>My Portfolio</title>
+    <link rel = "stylesheet" hreft = "style.css">
+    
+
+
 </head>
-<body>
 
-<h1>Para Ti Mi Amor <3</h1>
 
-<!-- This is the image tag with the style attribute -->
-<img src="https://cdn1.1800flowers.com/wcsstore/Flowers/images/catalog/98712lx.jpg" alt="Description of the image">
 
-</body>
+
+
+
+
+
+
+
+
 </html>
-
 
